crates/aranya-policy-compiler/tests/data/type_errors/if_cond_not_bool_invalid_type_2.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
2 |     if 3 {
  |        ^ expected `bool` but found `int`
